Fix multiinstance